# quran-assistant

./: .gitignore  README.md  analysis_options.yaml  build_android.sh  flutter_rust_bridge.yaml  ndk_download.sh  pubspec.yaml
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/cmake/: android_arm64_toolchain.cmake
rust/data/: all_verse_keys.json  ayah_phrase_map.json  ayah_texts.json  chapters.json  index_arab_combined.json  juzs.json  lemma_index_arab.json  phrase_highlight_map.json  phrase_index.json  semantic_index_arab.json  stem_index_arab.json  stop_words_arabic.json  translation_metadata.json  translations_33.json  valid-matching-ayah.json
rust/output/: page_first_verse.json  tajweed_index.json  tajweed_meta.json  translation-id.json
rust/preprocess/: all_verse_keys_converter.rs  arabic_stop_words_converter.rs  ayah_phrase_map_converter.rs  ayah_texts_converter.rs  chapter_converter.rs  convert_page_verses.rs  convert_tajweed_index.rs  convert_tajweed_meta.rs  convert_translation_id.rs  convert_words.rs  highlight_index_combined_converter.rs  index_arab_combined_converter.rs  juzs_converter.rs  lemma_index_arab_converter.rs  page_layout_converter.rs  phrase_highlight_map_converter.rs  phrase_index_converter.rs  run_all_conversions.rs  semantic_index_arab_converter.rs  stem_index_arab_converter.rs  translation_metadata_converter.rs  translations_converter.rs  valid_matching_ayah_converter.rs  verse_by_chapter_converter.rs
rust/src/: engine_data_assets.rs  engine_data_loader.rs  frb_generated.rs  lib.rs  models.rs  quiz_utils.rs  search_engine.rs  (+1 more)
(+1013 files in other folders)
