[package]
name = "rust_lib_quran_assistant"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["derive"] }
zstd = "0.13"
once_cell = "1.21.3"

serde_json = "1.0.140"
ffi-support = "0.4.4"
rust-embed = { version = "8.7.2", features = ["include-exclude"]}
regex = "1.10.4"
lazy_static = "1.4.0" # Ini dikomentari, jadi tidak akan digunakan kecuali diaktifkan.
rand = "0.9.1"
log = "0.4"          # Versi facade log
# android_logger = "0.15.1" # Versi android_logger yang terbaru
# tantivy = "0.24.1"
rmp-serde = "1.3.0"                                # Untuk msgpack serialisasi/deserialisasi
unicode-normalization = "0.1.24"
unicase = "2.8.1"
tar = "0.4.44"
# rusqlite = "0.37.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
